Bug 249557 - Plasma-desktop will not run from command line - errors out when attempting to restart
Summary: Plasma-desktop will not run from command line - errors out when attempting to...
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Kevin Ottens
URL:
Keywords:
: 249374 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-08-31 00:31 UTC by bill p. (aka google01103)
Modified: 2010-08-31 13:43 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description bill p. (aka google01103) 2010-08-31 00:31:30 UTC
Version:           unspecified (using Devel) 
OS:                Linux

If I try and restart plasma (kquitapp plasma-desktop && plasma-desktop) I get the following error:
<unknown program name>(30469)/ kdemain: !!{} STARTUP TIME 66561443 START (line: 48 )


Reproducible: Always

Steps to Reproduce:
kill & restart plasma (kwuitapp plasma-desktop && plasma-desktop)

Actual Results:  
errors out and does not start
<unknown program name>(30469)/ kdemain: !!{} STARTUP TIME 66561443 START (line: 48 )

Expected Results:  
plasma restarts

if I restart kde everyting starts fine
Comment 1 Aaron J. Seigo 2010-08-31 02:22:51 UTC
there is a hung plasma-desktop process when this happens: kquitapp plasma-desktop isn't actually quitting the app: it starts to quit, but then plasma-desktop gets hung. this is a recent problem somewhere in kdelibs: we're seeing it in other apps as well. (i've experienced it in ksnapshot, gwenview, ..)

"if I restart kde"

this is because the hung plasma-desktop process gets killed on logging out.

as it's a general problem recently introduced somewhere in kdelibs, i'm not interested in tracking this issue here under the plasma component. if i re-assign it to kdelibs component, i doubt it'll get closed in a timely manner due to nothing pinpointing which component is actually to blame and that the issue is only visible in current trunk. i'll take this to k-c-d to see if we can track down the problem there.

p.s. there is no "kde" to restart; you mean Plasma Desktop :)
Comment 2 Aaron J. Seigo 2010-08-31 02:26:23 UTC
tracked it down with my first gdb backtrace: it's in the new Solid fstab backend.
Comment 3 Mario Bensi 2010-08-31 11:33:54 UTC
SVN commit 1170242 by bensi:

resolve deadlock on app exit in fstab backend

CCMAIL: aseigo@kde.org
BUG: 249557



 M  +17 -2     fstabmanager.cpp  
 M  +1 -0      fstabmanager.h  
 M  +19 -3     fstabstorageaccess.cpp  
 M  +1 -0      fstabstorageaccess.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1170242
Comment 4 Christoph Feck 2010-08-31 13:14:07 UTC
*** Bug 249374 has been marked as a duplicate of this bug. ***
Comment 5 Christoph Feck 2010-08-31 13:43:06 UTC
I can confirm that the fix works (only quickly tried dolphin, though).