resolve deadlock on app exit in fstab backend

CCMAIL: aseigo@kde.org
BUG: 249557


svn path=/trunk/KDE/kdelibs/; revision=1170242